envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [vaultwarden, envoy-gateway-system, jellyfin, immich]
    - name: https
      protocol: HTTPS
      hostname: bitwarden.aidengrossman.com
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: bitwarden-eg-https
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [vaultwarden, envoy-gateway-system]
    - name: https-jellyfin
      protocol: HTTPS
      hostname: jellyfin-upload.aidengrossman.com
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: jellyfin-upload-eg-https
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [jellyfin, envoy-gateway-system]
    - name: https-jellyfin2
      protocol: HTTPS
      hostname: jellyfin.aidengrossman.com
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: jellyfin-eg-https
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [jellyfin, envoy-gateway-system]
    - name: https-immich
      protocol: HTTPS
      hostname: immich.aidengrossman.com
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: immich-eg-https
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [immich, envoy-gateway-system]
